--- a/css/style.css
+++ b/css/style.css
@@ -1,75 +1,76 @@
-/*
---- 01 TYPOGRAPHY SYSTEM
-
-      Font sizes (px)
-      10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-      Font weights:
-
-      Line heights:
-      Default: 1
-
-      SPACING SYSTEM (px)
-      2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
---- 02 COLORS
-      PRIMARY: #e67e22
-
-      Tints: #fdf2e9
-      SHades: #cf711f
-      Accents:
-      Greys:
-      #555
-
---- 05 SHADOWS
-
---- 06 BORDER-RADIUS
-
---- 07 WHITESPACE
-- Spacing System (px) 
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-*/
 
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+
+/******************************/
+/*********HEADER********/
+/******************************/
+.header {
+  display:flex;
+  justify-content:space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+  height:9.6rem;
+  padding: 0 4.8rem;
+}
+.logo {
+  height: 2.4rem;
 }
 
-html {
-  font-size:62.5%
+/******************************/
+/*********NAVIGATION********/
+/******************************/
+.main-nav-list {
+  list-style: none;
+  display:flex;
+  align-items: center;
+  gap: 3.2rem
 }
 
-body {
-  font-family: "Rubik",sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
 }
 
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+  ;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
+}
+
+/******************************/
+/*********HERO SECTION********/
+/******************************/
 .section-hero {
   background-color: #fdf2e9;
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 9.6rem 0;
 }
 
 .hero {
   max-width: 130rem;
   margin: 0 auto;
+  padding:0 3.2rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap:9.6rem;
   align-items:center
-}
-
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom:3.2rem
 }
 
 .hero-description {
@@ -78,41 +79,6 @@ body {
   margin-bottom:4.8rem
 }
 
-.btn:link, .btn:visited {
-  display: inline-block;
-  background-color: #e67e22;
-  color: #fff;
-  text-decoration: none;
-  font-size: 2rem;
-  font-weight: 600;
-  padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-
-  transition: all 0.3s;
-}
-
-.btn--full:link, 
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fff
-}
-
-.btn--full:hover, 
-.btn--full:active {
-  background-color: #cf711f;
-}
-
-.btn--outline:link, 
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--outline:hover, 
-.btn--outline:active {
-  background-color: #fdf2e9;
-  box-shadow: 0 0 0 3px #fff;
-}
 
 .hero-img {
   width: 100%;
@@ -153,3 +119,69 @@ body {
 .delivered-text span {
   color: #cf711f;
 }
+
+/******************************/
+/*********HOW IT WORKS SECTION********/
+/******************************/
+
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
+.step-img-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  top: 10%;
+  transform: translate(-50% -50%);
+ 
+  
+}
+
+.step-img-box::before {
+width: 60%;
+padding-bottom: 60%;
+background-color: #fdf2e9;
+ z-index: -2;
+}
+
+.step-img-box::after {
+  top: 20%;
+width: 45%;
+padding-bottom: 45%;
+background-color: #fae5d3;
+z-index: -1;
+}
+
+.step-img {
+  width: 35%;
+  z-index: 10;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+/* 
+.section-how div div {
+  padding: 100px;
+  font-size: 50px;
+  background-color: #cf711f;
+} */
