--- a/css/general.css
+++ b/css/general.css
@@ -106,13 +106,27 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+  display: inline-block;
+  color:#e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
 
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
 /******************************/
 /*********REUSABLE GRID*******/
 /******************************/
 .container {
   max-width: 120rem;
-  padding: 03.2rem;
+  padding: 0 3.2rem;
   margin: 0 auto;
 }
 
@@ -165,4 +179,20 @@ body {
   color: #cf711f;
   text-transform: uppercase;
   margin-bottom: 1.6rem;
+}
+
+/* HELPER/SETTINGS CLASSES */
+.center-text {
+  text-align: center;
+}
+
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+strong {
+  font-weight: 500;
 }
