--- a/css/general.css
+++ b/css/general.css
@@ -69,16 +69,22 @@ body {
   margin-bottom: 3.2rem
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
-  background-color: #e67e22;
-  color: #fff;
+  /* background-color: #e67e22;
+  color: #fff; */
   text-decoration: none;
   font-size: 2rem;
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
+
+  /* Only necessary fro btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 
   transition: all 0.3s;
 }
@@ -114,6 +120,18 @@ body {
   border-bottom: 1px solid currentColor;
   padding-bottom: 2px;
   transition: all 0.3s;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:hover,
@@ -208,6 +226,14 @@ body {
   height: 3rem;
   color: #e67e22;
 }
+
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22;
+  outline-offset: 6px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+}
+
 /* HELPER/SETTINGS CLASSES */
 .center-text {
   text-align: center;
