--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
   background-color: #fdf2e9;
   height:9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 .logo {
   height: 2.4rem;
@@ -55,9 +56,28 @@
   background-color: #cf711f;
 }
 
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
 /******************************/
 /*********HERO SECTION********/
 /******************************/
+
 .section-hero {
   background-color: #fdf2e9;
   padding: 4.8rem 0 9.6rem 0;
